<resources>
    <string name="app_name">SamuliLehtonen_ArthurXavier_COMP304_Sec003_Lab4</string>
    <string name="medical_tests">Medical tests</string>
    <string name="medical_tests_login">Welcome to Medical tests -app!</string>
    <string name="medical_tests_login_info"> Please log in with your ID and password!</string>
    <string name="login">Login</string>
    <string name="patient_activity">Add patient\'s data</string>
    <string name="test_activity">Create test</string>
    <string name="test_info_activity">View test\'s info</string>
    <string name="update_info">Update test\'s info</string>
    <string name="title_activity_test_info">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_update_info">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="loginIdFieldHint">Nurse ID</string>
    <string name="loginFieldPasswordHint">Password</string>
    <string name="register_yourself_text">Register yourself:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>